Uppercased constants + env var names for readability

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -70,7 +70,7 @@ jobs:
           done
 
           # Store sync src for commit msg in self-push step
-          echo "sync_src=$sync_src" >> $GITHUB_ENV
+          echo "SYNC_SRC=$sync_src" >> $GITHUB_ENV
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-refresh/
         run: |
@@ -104,7 +104,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from \`${{ env.sync_src }}\`]" || true
+          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from \`${{ env.SYNC_SRC }}\`]" || true
           git push
 
       - name: Push changes to adamlui/ai-apps
