Replaced auto-sync src's in commit msgs w/ URLs

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -111,12 +111,12 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from adamlui/chatgpt-auto-refresh]" || true
+          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from https://github.com/adamlui/chatgpt-auto-refresh]" || true
           git push
 
       - name: Push changes to adamlui/userscripts
         run: |
           cd ${{ github.workspace }}/adamlui/userscripts
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from adamlui/chatgpt-auto-refresh]" || true
+          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from https://github.com/adamlui/chatgpt-auto-refresh]" || true
           git push
