Removed `={}` around newly single `rsync --exclude` val for proper parsing

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-refresh/
         run: |
-          rsync -avhr --delete --exclude={'.*'} \
+          rsync -avhr --delete --exclude '.*' \
             ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ \
             ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-refresh/
 
