Added `permissions` to override repo/org settings w/ least privileges required for improved security (https://cwe.mitre.org/data/definitions/275.html)

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -5,6 +5,9 @@ on:
     branches: [main]
     paths: ["**", "!.*"]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     if: (github.repository == 'adamlui/chatgpt-auto-refresh') && (github.event.commits[0].committer.username != 'kudo-sync-bot')
