Added `env.SYNC_SRC` check to self-push step

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -104,6 +104,7 @@ jobs:
           git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
 
       - name: Push changes to adamlui/chatgpt-auto-refresh
+        if: env.SYNC_SRC
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
