Restored `token` needed for self-push step

--- a/.github/workflows/sync-changes-to-repos.yml
+++ b/.github/workflows/sync-changes-to-repos.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Checkout adamlui/chatgpt-auto-refresh
         uses: actions/checkout@v5
         with:
+          token: ${{ secrets.REPO_SYNC_PAT }}
           path: adamlui/chatgpt-auto-refresh
           fetch-depth: 2
 
