--- a/.github/workflows/sync-changes-to-repos.yml
+++ b/.github/workflows/sync-changes-to-repos.yml
@@ -110,7 +110,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from ${{ env.SYNC_SRC }}/]" || true
+          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from $SYNC_SRC/]" || true
           git push
 
       - name: Push changes to adamlui/ai-web-extensions
